[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
clap = { version = "4.0.27", features = ["derive"] }
config = "0.13.2"
console = "0.15.2"
envconfig = "0.10.0"
futures-util = "0.3.25"
serde = "1.0.147"
serde_yaml = "0.9.14"
ame_client = { path = "../client" }
thiserror = "1.0.37"
tokio = "1.22.0"
tonic = "0.8.2"
walkdir = "2.3.2"
rand = "0.8.5"
dotenvy = "0.15.6"
confy = "0.5.1"

[dev-dependencies]
assert_cmd = "2.0.6"
assert_fs = "1.0.9"
k8s-openapi = "0.16.0"
kube = "0.76.0"
predicates = "2.1.3"
controller = { path = "../controller" }
insta = { version = "1.21.1", features = ["filters"] }
fs_extra = "1.2.0"
common = { path = "../common" }
similar-asserts = "1.4.2"
serial_test = "0.9.0"
temp-env = { version = "0.3.1", features = ["async_closure"] }
rstest = "0.16.0"
