[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
clap = { version = "4.0.27", features = ["derive"] }
console = "0.15.2"
envconfig = "0.10.0"
futures-util = "0.3.25"
serde = "1.0.147"
serde_yaml = "0.9.14"
ame = { path = "../lib", features = ["native-client"], default-features = false }
thiserror = "1.0.37"
tokio = "1.22.0"
tonic = { version= "0.8.2", features = ["transport","tls", "tls-roots"] }
walkdir = "2.3.2"
rand = "0.8.5"
confy = "0.5.1"
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
hyper = "0.14.23"
tower = "0.4.13"
hyper-rustls = { version = "0.23.2", features = ["http2"] }
http-body = "0.4.5"
openidconnect = "2.5.0"
url = "2.3.1"
serde_json = "1.0.91"
reqwest = "0.11.14"
tower-http = { version = "0.3.5", features = ["auth"] }
http = "0.2.8"
bytes = "1.3.0"
tracing = "0.1.37"
oauth2 = "4.3.0"
spinners = "4.1.0"
colored = "2.0.0"
dialoguer = "0.10.3"

[dev-dependencies]
assert_cmd = "2.0.6"
assert_fs = "1.0.9"
kube = "0.80.0"
insta = { version = "1.21.1", features = ["filters", "redactions", "yaml"] }
fs_extra = "1.2.0"
similar-asserts = "1.4.2"
serial_test = "0.9.0"
temp-env = { version = "0.3.1", features = ["async_closure"] }
rstest = "0.16.0"
k8s-openapi = { version = "0.17.0", features = ["v1_23", "schemars" ] }
ame = { path = "../lib", features = ["native-client", "custom-resources", "ame-control"] }
