[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ame"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.3.19", features = ["derive"] }
console = "0.15.7"
envconfig = "0.10.0"
futures-util = "0.3.28"
serde = "1.0.180"
serde_yaml = "0.9.25"
ame = { path = "../lib", features = ["native-client", "project-tools", "custom-resources", "ame-control"], default-features = false }
thiserror = "1.0.44"
tokio = {version = "1.29.1", features = ["fs"]}
tonic = { version= "0.8.3", features = ["transport","tls", "tls-roots"] }
walkdir = "2.3.3"
rand = "0.8.5"
confy = "0.5.1"
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.3"
hyper = "0.14.27"
tower = "0.4.13"
hyper-rustls = { version = "0.23.2", features = ["http2"] }
http-body = "0.4.5"
openidconnect = "2.5.1"
url = "2.4.0"
serde_json = "1.0.104"
reqwest = "0.11.18"
tower-http = { version = "0.3.5", features = ["auth"] }
http = "0.2.9"
bytes = "1.4.0"
tracing = "0.1.37"
oauth2 = "4.4.1"
spinners = "4.1.0"
colored = "2.0.4"
dialoguer = {version = "0.10.4", features=["fuzzy-select"]}
atty = "0.2.14"
anyhow = "1.0.72"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
kube = "0.80.0"
insta = { version = "1.31.0", features = ["filters", "redactions", "yaml"] }
similar-asserts = "1.4.2"
serial_test = "0.9.0"
temp-env = { version = "0.3.4", features = ["async_closure"] }
rstest = "0.16.0"
k8s-openapi = { version = "0.17.0", features = ["v1_23", "schemars" ] }
ame = { path = "../lib", features = ["native-client", "custom-resources", "ame-control", "project-tools"] }
fs_extra = "1.3.0"
