[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
doc = false
name = "project_src_crdgen"
path = "src/project_src_crdgen.rs"

[[bin]]
doc = false
name = "project_crdgen"
path = "src/project_crdgen.rs"

[[bin]]
doc = false
name = "data_set_crdgen"
path = "src/data_set_crd_gen.rs"

[dependencies]
ame = { version = "0.1.0", path = "../lib", features = ["ame-control", "custom-resources"] }
async-trait = "0.1.66"
duration-string = "0.2.0"
either = "1.8.0"
envconfig = "0.10.0"
futures = "0.3.25"
git2 = "0.17.0"
humantime = "2.1.0"
k8s-openapi = { version = "0.17.0", features = ["v1_23", "schemars" ] }
kube = { version = "0.80.0", features = ["runtime", "client", "derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
schemars = "0.8.11"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
serde_yaml = "0.9.14"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
k8s-openapi = { version = "0.17.0", features = ["v1_23", "schemars" ] }
