[package]
name = "ame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = {version = "0.2.9", optional = true }
hyper = { version = "0.14.24", features = ["client"], optional = true }
leptos = { version = "0.2", default-features = false, features = ["serde", "stable"], optional = true }
prost = "0.11.7"
thiserror = "1.0.38"
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"], optional = true  }
tonic = { version = "0.8.3", default-features = false }
tower  = {version = "0.4.13", optional = true}
tower-http = { version = "0.4.0", features = ["auth"], optional = true }
tonic-web-wasm-client = {version = "0.3.2", optional = true}
url = "2.3.1"
http-body = "0.4.5"
tokio = "1.25.0"
tokio-stream = "0.1.12"
async-stream = "0.3.4"
futures-util = "0.3.26"
futures = "0.3.26"
kube = {version = "0.80.0", optional = true, features = ["derive", "runtime", "client"]}
async-trait = "0.1.64"
schemars = "0.8.11"
serde = "1.0"
serde_json = "1.0.91"
serde_merge = {version = "0.1.3", optional = true}
rustls-native-certs = {version = "0.6.2", optional = true}
hyper-rustls = { version = "0.23.2", features = ["http2"], optional = true }
open = {version = "4.0.1", optional = true}
openidconnect = {version = "2.5.1", optional = true}
oauth2 = {version = "4.3.0", optional = true}
reqwest = {version = "0.11.15", optional = true, features = ["json"]}
cfg-if = "1.0.0"
k8s-openapi = {optional=true, version = "0.17.0", features = ["v1_23", "schemars" ] }
serde_tuple = { version = "0.5.0", optional = true }
git2 = {version = "0.17.0", optional = true}
serde_yaml = {version = "0.9.21", optional = true}
tracing = {version = "0.1.37", optional = true}
duration-string = {version = "0.2.0", optional = true}
envconfig = {version = "0.10.0", optional = true}
similar = {version = "2.2.1", optional = true}
humantime = {version = "2.1.0", optional = true}
similar-asserts = {version = "1.4.2", optional = true}
either = {version = "1.8.0", optional = true}

[dev-dependencies]
either = "1.8.0"
assert_fs = "1.0.10"
insta = {version = "1.21.0", features = ["yaml"] }
predicates = "2.1.4"
serial_test = "0.9.0"
k8s-openapi = { version = "0.17.0", features = ["v1_23", "schemars" ] }
tonic = { version = "0.8.3"  }

[features]
web-components = ["dep:leptos", "dep:tonic-web-wasm-client", "dep:hyper"]
native-client = ["dep:hyper", "dep:tokio-rustls", "dep:tower", "dep:tower-http", "dep:rustls-native-certs", "dep:hyper-rustls", "dep:open", "dep:openidconnect", "dep:oauth2", "dep:reqwest", "dep:http"]
ame-control = ["dep:kube", "dep:serde_merge"]
custom-resources = ["dep:kube", "dep:k8s-openapi", "dep:serde_tuple", "dep:reqwest", "dep:git2", "dep:serde_merge", "dep:serde_yaml", "dep:tracing", "dep:duration-string", "dep:envconfig",  "dep:similar", "dep:humantime", "dep:similar-asserts", "dep:either", "tonic/default"]


[build-dependencies]
tonic-build = { version = "0.8.4", default-features = false, features = [
    "prost",
] }
