[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
schemars = "0.8.11"
serde = "1.0"
serde_json = "1.0.91"
prost = "0.11.6"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.2"
serde = "1.0"

