[package]
name = "service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ame-server"
path = "src/server.rs"

[[bin]]
name = "ame-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
controller = { path = "../controller" }
k8s-openapi = { version = "0.16.0", features = ["v1_23", "schemars"] }
kube = { version = "0.76.0", features = ["client"] }
thiserror = "1.0.37"
tonic-health = "0.7.1"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
serial_test = "0.9.0"
