[package]
name = "service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ame-server"
path = "src/server.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k8s-openapi = { version = "0.17.0", features = ["v1_23", "schemars"] }
kube = { version = "0.80.0", features = ["runtime", "client" ] }
thiserror = "1.0.44"
tonic-health = "0.7.1"
log = "0.4.19"
tower =  { version = "0.4.13", features = ["filter"] }
hyper = "0.14.27"
tower-http = { version = "0.3.5", features = ["compression-full", "decompression-full", "sensitive-headers", "set-header"] }
tracing = { version = "0.1.37", features = ["log-always", "log"] }
tracing-subscriber  = {version = "0.3.17", features = ["env-filter"] }
tracing-attributes = "0.1.26"
url = "2.4.0"
rust-s3 = "0.32.3"
async-trait = "0.1.72"
envconfig = "0.10.0"
tonic-web = "0.4.0"
ame = { version = "0.1.0", path = "../lib", features = ["ame-control"] }
either = "1.9.0"

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11.9"
serde = "1.0"

[dev-dependencies]
serial_test = "0.9.0"
