[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Jessie Chatham Spencer <--global>"]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.24.2"
tensorflow = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
